# guide-language-diffusion

./: environment.yaml  eval-gemma.py  extend_diffusion_gemma_fp8.py  gemma_utils.py  pipeline.py  pyproject.toml  tasks.py  test-cache.py  test-gemma.py  test-parallel.py  test-pipeline.py  test-sampling.py  test-tsne.py  utils.py
config/: best-of-n.py  flow-direct.py  flow-guide.py  grpo.py  open-evolve.py  optimize-hidden.py  optimize-noise.py
trainer/: base.py  best-of-n.py  flow-direct.py  flow-guide.py  grpo.py  mixins.py  open-evolve.py  optimize-hidden.py  optimize-noise.py
