[project]
name = "guide-language-diffusion"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.11.*",
    "torchvision==0.26.*",
    "transformers==5.12.*",
    "diffusers==0.38.*",
    "huggingface-hub==1.19.*",
    "accelerate==1.14.*",
    "sentencepiece==0.2.1",
    "datasets",
    "compressed-tensors",
    "einops",
    "wandb",
    "ml-collections",
    "matplotlib",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
vllm = [{ url = "https://github.com/vllm-project/vllm/releases/download/v0.23.0/vllm-0.23.0+cu129-cp38-abi3-manylinux_2_28_x86_64.whl" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true