[project]
name = "guide-language-diffusion"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.11.*",
    "torchvision==0.26.*",
    "transformers==5.12.*",
    "diffusers==0.38.*",
    "huggingface-hub==1.19.*",
    "accelerate==1.14.*",
    "sentencepiece==0.2.1",
    "datasets",
    "compressed-tensors",
    "einops",
    "wandb",
    "ml-collections",
    "matplotlib",
    "openevolve",
]

# conda create -n cu129 cuda-toolkit=12.9.2
# Install vllm (see: https://github.com/vllm-project/vllm/issues/43435#issuecomment-4525734897)
# uv pip install vllm --prerelease=allow --extra-index-url https://wheels.vllm.ai/nightly/cu129 --extra-index-url https://download.pytorch.org/whl/cu129 --index-strategy unsafe-best-match

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true