# conda create -n cu129 cuda-toolkit=12.9.2 "gxx<14" "gcc<14"
# conda activate cu129
# MAX_JOBS=4 uv sync

[project]
name = "guide-language-diffusion"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.11.*",
    "torchvision==0.26.*",
    "torchaudio==2.11.*",
    "transformers==5.13.*",
    "diffusers==0.38.*",
    "huggingface-hub==1.19.*",
    "accelerate==1.14.*",
    "sentencepiece==0.2.1",
    "datasets",
    "compressed-tensors",
    "einops",
    "wandb",
    "ml-collections",
    "matplotlib",
    "openevolve",
    "vllm==0.24.0",
    "lm_eval[api,hf,vllm]==0.4.12",
    "peft==0.19.*",
    "math-verify==0.9.*",
    "flash-attn==2.8.*"
]

[tool.uv]
python-preference = "only-managed"
environments = ["sys_platform == 'linux'"]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]
vllm = [{ index = "vllm" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "vllm"
url = "https://wheels.vllm.ai/0.24.0/cu129"
explicit = true